Jar task to gradle and updated Dockerfile. This should fix #19 (#22)
* Jar task to gradle and updated Dockerfile. This should fix #19

* Actual version is 0.1 not 0.0.1

* Add java args to Dockerfile entrypoint